WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
163154
[WK1 Mac] Fix repaints of fixed-background elements in layer-backed WebViews
https://bugs.webkit.org/show_bug.cgi?id=163154
Summary
[WK1 Mac] Fix repaints of fixed-background elements in layer-backed WebViews
Simon Fraser (smfr)
Reported
2016-10-07 16:01:51 PDT
[WK1 Mac] Fix repaints of fixed-background elements in layer-backed WebViews
Attachments
Patch
(4.63 KB, patch)
2016-10-07 16:08 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Patch
(4.66 KB, patch)
2016-10-07 16:10 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Patch
(5.00 KB, patch)
2016-10-07 17:13 PDT
,
Simon Fraser (smfr)
thorton
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2016-10-07 16:08:42 PDT
Created
attachment 290980
[details]
Patch
WebKit Commit Bot
Comment 2
2016-10-07 16:09:51 PDT
Attachment 290980
[details]
did not pass style-queue: ERROR: Source/WebKit/mac/WebView/WebClipView.h:0: Use #pragma once header guard. [build/header_guard] [5] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Simon Fraser (smfr)
Comment 3
2016-10-07 16:10:38 PDT
Created
attachment 290981
[details]
Patch
WebKit Commit Bot
Comment 4
2016-10-07 16:12:39 PDT
Attachment 290981
[details]
did not pass style-queue: ERROR: Source/WebKit/mac/WebView/WebClipView.h:0: Use #pragma once header guard. [build/header_guard] [5] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tim Horton
Comment 5
2016-10-07 16:14:06 PDT
Comment on
attachment 290980
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=290980&action=review
> Source/WebKit/mac/WebView/WebClipView.mm:51 > @interface NSClipView (WebNSClipViewDetails)
Nothing in the () maybe.
> Source/WebKit/mac/WebView/WebHTMLView.mm:4115 > - if (_private->inScrollPositionChanged) { > + if (_private->inScrollPositionChanged && [(WebClipView *)[self superview] currentScrollIsBlit]) {
Maybe check to be safe?
Simon Fraser (smfr)
Comment 6
2016-10-07 17:13:00 PDT
Created
attachment 290986
[details]
Patch
WebKit Commit Bot
Comment 7
2016-10-07 17:14:30 PDT
Attachment 290986
[details]
did not pass style-queue: ERROR: Source/WebKit/mac/WebView/WebHTMLView.mm:4122: Multi line control clauses should use braces. [whitespace/braces] [4] ERROR: Source/WebKit/mac/WebView/WebClipView.h:0: Use #pragma once header guard. [build/header_guard] [5] Total errors found: 2 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tim Horton
Comment 8
2016-10-07 17:15:23 PDT
Comment on
attachment 290986
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=290986&action=review
> Source/WebKit/mac/WebView/WebHTMLView.mm:4122 > - if (_private->inScrollPositionChanged) { > + if (_private->inScrollPositionChanged
Do not love this wrapping.
Simon Fraser (smfr)
Comment 9
2016-10-07 17:23:12 PDT
https://trac.webkit.org/r206945
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug