[WK1 Mac] Fix repaints of fixed-background elements in layer-backed WebViews https://bugs.webkit.org/show_bug.cgi?id=163154 rdar://problem/28674216

Reviewed by Tim Horton.

r55159 added code to counteract AppKit's adjustment of dirty regions during scrolling,
by offsetting the dirty rect in -setNeedsDisplayInRect: if the call happens during
the NSViewBoundsDidChangeNotification handling.

However, AppKit only does dirty region adjustment in the code path that blits ("copy
on scroll"), so r55159 produces incorrect behavior in, for example, layer-backed views.

Fix by overriding -[NSClipView _canCopyOnScrollForDeltaX:deltaY:] to know if a single
scroll is going to blit, and only do adjustments in -setNeedsDisplayInRect: if it is.

* WebView/WebClipView.h:
* WebView/WebClipView.mm:
(-[WebClipView _immediateScrollToPoint:]):
(-[WebClipView _canCopyOnScrollForDeltaX:deltaY:]):
(-[WebClipView currentScrollIsBlit]):
* WebView/WebHTMLView.mm:
(-[WebHTMLView setNeedsDisplayInRect:]):
(-[WebHTMLView drawRect:]):

Canonical link: https://commits.webkit.org/180993@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206945 268f45cc-cd09-0410-ab3c-d52691b4dbfc